# full-paperless

./: Cargo.toml  Makefile  README.md  openapi_issues.md
src/: auth.rs  body.rs  client.rs  error.rs  lib.rs  params.rs  response.rs  utils.rs
src/clients/: mod.rs  reqwest.rs
src/clients/reqwest/: lite.rs  mod.rs
src/re/: mod.rs
src/schema/: mod.rs
src/schema/api/: mod.rs
src/schema/model/: account_type.rs  actor.rs  application_configuration.rs  assign_correspondent_from.rs  assign_title_from.rs  attachment_type.rs  basic_user.rs  color_conversion_strategy.rs  consumption_scope.rs  correspondent.rs  custom_field.rs  data_type.rs  display_mode.rs  document.rs  document_metadata.rs  document_type.rs  file_version.rs  group.rs  imap_security.rs  log_entry.rs  mail_account.rs  mail_rule.rs  mail_rule_action.rs  matching_algorithm.rs  mod.rs  note.rs  ocr_mode.rs  output_type.rs  paginated.rs  pdf_layout.rs  permission_class.rs  permissions.rs  profile.rs  rule_type.rs  saved_view.rs  saved_view_filter_rule.rs  schedule_date_field.rs  share_link.rs  skip_archive_file.rs  social_account.rs  (+18 more)
src/services/: config.rs  correspondents.rs  custom_fields.rs  document_types.rs  documents.rs  groups.rs  logs.rs  mail_accounts.rs  mail_rules.rs  mod.rs  profile.rs  saved_views.rs  share_links.rs  storage_paths.rs  tags.rs  tasks.rs  users.rs  workflows.rs
tests/: main.rs
tests/docker/: docker-compose.env  docker-compose.yml
tests/services/: correspondents.rs  groups.rs  mail_accounts.rs  mod.rs
tests/utils/: arbitrary.rs  client.rs  mod.rs  time.rs
(+61 files in other folders)
