[package]
name = "paper-plane"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Unofficial rich client for paperless-ngx"
repository = "https://github.com/nicuveo/paper-plane"
keywords = ["paperless-ngx", "client", "REST"]

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
readonly = "0.2.13"
reqwest = { version = "0.12.19", features = ["json", "multipart", "stream"], optional = true }
secure-string = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
serde_with = "3.12.0"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
rusty-docker-compose = "0.3.1"
libtest-mimic-collect = "0.3.2"
tokio = "1.45.1"
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
libtest-mimic = "0.8.1"
gag = "1.0.0"
rand = "0.9.1"

[[test]]
name = "integration"
harness = false
path = "tests/main.rs"
